# HVAC-Customer-Complaint-Intelligence-System

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
hvac-backend/: .env.example  .gitignore  .pre-commit-config.yaml  BRANCHING_STRATEGY.md  DEMO_SCRIPT.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
hvac-backend/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
hvac-backend/alembic/: env.py
hvac-backend/alembic/versions/: 0001_initial_schema.py  0002_cluster_previous_member_ids.py  0003_performance_indexes.py  0004_extend_source_enum.py  0005_external_id_language.py  0006_ingest_batches.py  0007_commercial_buildings.py  0008_telegram_support_tables.py  0009_seed_carrier_products.py  0010_support_message_image.py  0011_conversation_sessions_and_gathered_info.py
hvac-backend/app/: config.py  dependencies.py  main.py
hvac-backend/app/api/v1/: alerts.py  analytics.py  clusters.py  complaints.py  health.py  router.py  search.py  support.py  umap.py
hvac-backend/app/core/: exceptions.py  logging.py  security.py
hvac-backend/app/db/: base.py  session.py
hvac-backend/app/db/migrations/: env.py
hvac-backend/app/models/: __init__.py  batch_run_log.py  cluster.py  commercial_building.py  complaint.py  ingest_batch.py  product.py  support_conversation.py  support_message.py  trend_snapshot.py  umap_coord.py
hvac-backend/app/schemas/: alert.py  cluster.py  complaint.py  support.py
hvac-backend/app/services/: advisory_service.py  cluster_chat_service.py  cluster_service.py  complaint_service.py  llm_client.py  telegram_bot_service.py  trend_service.py
hvac-backend/app/workers/: celery_app.py  cluster_job.py  embedding_worker.py  label_job.py  sentiment_worker.py  telegram_poll_worker.py  trend_job.py
hvac-backend/scripts/: __init__.py  check_costs.py  check_no_print.py  check_pii_coverage.py  generate_variants.py  recalc_costs.py  run_telegram_bot.py  seed_db.py  verify_costs.py  verify_demo_data.py
hvac-backend/scripts/ingest/: README.md  _common.py  app_store.py  bdg2.py  cpsc.py  nyc_311.py
hvac-backend/tests/: conftest.py
hvac-backend/tests/compliance/: conftest.py  test_pii_detection.py  test_pii_pipeline.py
hvac-backend/tests/compliance/reports/: pii_compliance_2026-05-05.md
hvac-backend/tests/integration/: test_cluster_api.py  test_frontend_contracts.py  test_ingest_api.py  test_performance.py  test_support_api.py
hvac-backend/tests/unit/: test_api_contracts.py  test_cluster_service.py  test_complaint_ingestion.py  test_llm_client.py  test_pii_stripping.py  test_sentiment.py  test_services.py  test_telegram_service.py
hvac-frontend/: .env.example  .eslintrc.json  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
hvac-frontend/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
hvac-frontend/src/: App.jsx  index.css  main.jsx
hvac-frontend/src/api/: alerts.js  analytics.js  client.js  clusters.js  complaints.js  health.js  search.js  support.js  umap.js
hvac-frontend/src/components/: AdvisoryModal.jsx  AlertBanner.jsx  AnalyticsView.jsx  AppShell.jsx  BoroughHeatmap.jsx  BoroughMap.jsx  ClusterChatPanel.jsx  ClusterDetail.jsx  ClusterSidebar.jsx  DemoMode.jsx  DrilldownMap.jsx  GeoChoroplethMap.jsx  GeographicView.jsx  KeyboardHelp.jsx  KpiTile.jsx  OverviewView.jsx  SearchView.jsx  Sparkline.jsx  SupportInboxView.jsx  ThemeListItem.jsx  TopBar.jsx  UmapScatterPlot.jsx  UploadDropzone.jsx  UploadModal.jsx
hvac-frontend/src/data/: india_states.json  world_countries.json
hvac-frontend/src/hooks/: useAlerts.js  useAnalytics.js  useClusterChat.js  useClusters.js  useComplaints.js  useExport.js  (+7 more)
hvac-ml/: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
hvac-ml/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
hvac-ml/data/generators/: synthetic_complaints.py
hvac-ml/notebooks/: 01_pipeline_validation.ipynb  _build_notebook.py
hvac-ml/pipeline/: clusterer.py  embedder.py  labeler.py  sentiment.py  trend_detector.py
hvac-ml/tests/: test_clusterer.py  test_clustering_quality.py  test_embedder.py  test_embedding_quality.py  test_labeler.py  test_sentiment.py  test_trend_detector.py  test_trend_quality.py
presentation/: speaker_notes.md
(+14 files in other folders)
