[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hvac-backend"
version = "0.1.0"
description = "HVAC Complaint Intelligence System — Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.9",
    "alembic==1.13.1",
    "pgvector==0.3.2",
    "celery[redis]==5.3.6",
    "celery-redbeat==2.2.0",
    "redis==5.0.4",
    "google-generativeai>=0.7.0",
    "structlog==24.1.0",
    "spacy>=3.8.2",
    # vaderSentiment / sentence-transformers / umap-learn / hdbscan are pulled
    # in transitively via hvac-ml — keep ML libs pinned in ONE place only.
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "cryptography==42.0.7",
    "python-multipart==0.0.9",
    "aiofiles==23.2.1",
    "httpx==0.27.0",
    "tenacity==8.3.0",
    # ML pipeline lives in the sibling hvac-ml package — single source of truth
    # for embedding, clustering, sentiment, labeling, and trend detection.
    "hvac-ml",
]

[tool.uv.sources]
hvac-ml = { path = "../hvac-ml", editable = true }

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "aiosqlite==0.20.0",
    "factory-boy==3.3.0",
    "faker==25.2.0",
    "ruff==0.4.4",
    "mypy==1.10.0",
    "types-redis==4.6.0.20240417",
    "pre-commit==3.7.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "N818"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/", "tests/", "app/workers/", "app/db/migrations/"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=50"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "unit: fast unit tests, no external deps (default)",
    "integration: requires DB + Redis running",
    "compliance: PII compliance tests",
    "performance: SLO regression tests",
    "slow: ML pipeline tests (>10s each)",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*", "app/db/migrations/*"]
